# presentation-maker

./: README.md  docker-compose.yml
.cursor/agents/: architect.md  business-analyst.md  code-review.md  designer.md  developer.md  devops.md  documentation.md  orchestrator.md  qa-test.md  refactoring.md  security.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: presentation.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: pptx_service.py
backend/tests/: conftest.py  test_api_presentation.py  test_pptx_service.py  test_validation.py
docs/: agents_descr.md  api.md  architecture.md  code-review-json-mode.md  code-review.md  design-spec.md  dev_plan.md  docker-report.md  docs-report.md  e2e-checklist.md  prd.md  security-audit.md  test-plan.md  ui-spec.md  user_stories.md
docs/adr/: 001-structure.md  002-api.md  003-pptx-lib.md  004-nfr-security.md
docs/plans/: architecture-json-mode.md  design-json-mode.md  dev_plan_2.md  dev_plan_set_template.md  documentation-report-json-mode.md  implementation-report-json-mode.md  orchestrator-final-json-mode.md  requirements-json-mode.md  test-report-json-mode.md
docs/reports/set_template/: README.md  architecture-set-template.md  design-set-template.md  orchestrator-final.md  report-code-review.md  (+6 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  constants.js  index.css
promts/: fix 1.txt  fix 2.txt  promt add json feature  указание шаблона для слайда.txt
(+5 files in other folders)
